--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>레이아웃</title>
     <link rel="stylesheet" href="./css/common.css">
+    
 </head>
 <body>
     <div class="wrap">
         <h1>레이아웃</h1>
         <ul class="menu">
             <li><a href="./pages/layout_01.html" target="_blank">레이아웃1</a></li>
-            <li><a href="#x">레이아웃2</a></li>
-            <li><a href="#x">레이아웃3</a></li>
-            <li><a href="#x">레이아웃4</a></li>
-            <li><a href="#x">레이아웃5</a></li>
-            <li><a href="#x">레이아웃6</a></li>
-            <li><a href="#x">레이아웃7</a></li>
-            <li><a href="#x">레이아웃8</a></li>
-            <li><a href="#x">레이아웃9</a></li>
+            <li><a href="./pages/layout_02.html" target="_blank">레이아웃2</a></li>
+            <li><a href="./pages/layout_03.html" target="_blank">레이아웃3</a></li>
+            <li><a href="./pages/layout_04.html" target="_blank">레이아웃4</a></li>
+            <li><a href="./pages/layout_05.html" target="_blank">레이아웃5</a></li>
+            <li><a href="./pages/layout_06.html" target="_blank">레이아웃6</a></li>
+            <li><a href="./pages/layout_07.html" target="_blank">레이아웃7</a></li>
+            <li><a href="./pages/layout_08.html" target="_blank">레이아웃8</a></li>
+            <li><a href="./pages/layout_09.html" target="_blank">레이아웃9</a></li>
         </ul>
     </div>
 </body>
