--- a/pages/layout_09.html
+++ b/pages/layout_09.html
@@ -43,7 +43,7 @@
                     <img src="../images/top_img_03.png" alt="커피사진3">
                 </div>
             </div>
-            <div class="texts">
+            <div class="text_box">
                 <h3>about seven coffee</h3>
                 <p>Proin vitae fringilla tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec facilisis ex quis ligula luctus, sit amet egestas elit semper. Nulla a dignissim nulla. Vivamus aliquet malesuada massa vitae vulputate. Morbi commodo leo turpis, id posuere lectus pellentesque et. Aliquam facilisis vehicula hendrerit. Cras non ullamcorper justo. </p>
                 <a href="#x">button</a>
